# nmaipy

./: .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  CURRENT_SPRINT.md  Dockerfile  INDS-2030.md  INDS-2036.md  INDS-2038.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  VERSIONING.md  bump_version.py  config.json  docker-compose-test.yml  docker-compose.yml  dockerfile  environment-minimal.yaml  environment.yaml  examples.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run.sh  run_10_test.py  run_docker.sh  run_tests_docker.sh  setup.py  test_pip_install.py  test_user_export.py
.claude/skills/: publish.md
.github/workflows/: release.yml
ai-feature-api/: AI_Features_API_Getting_Started_Guide.ipynb  Parcel_rollup.html  Parcel_rollup.ipynb  utils.py
conda.recipe/: meta.yaml
data/examples/: README.md  large_area.geojson  sydney_parcels.geojson  us_parcels.geojson
docs/: retry-and-gridding.md
nearmap_ai/: constants.py  feature_api.py  features_api.py  log.py  parcels.py
nmaipy/: __init__.py  __version__.py  aoi_io.py  api_common.py  base_exporter.py  cgroup_memory.py  class_descriptions.json  column_metadata.py  constants.py  coverage_utils.py  damage_conflation_api.py  damage_conflation_exporter.py  data_dictionary_generator.py  empty_roof_attributes.json  exporter.py  feature_api.py  feature_attributes.py  geometry_utils.py  log.py  output_files.py  output_readme_template.md  parcels.py  primary_feature_selection.py  readme_generator.py  reference_code.py  roof_age_api.py  roof_age_exporter.py  storage.py
nmaipy/data/: __init__.py  column_metadata.json  column_metadata_overrides.json  spec_raw_fields.json
notebooks/: AI_Feature_API_Getting_Started_Guide.ipynb  AI_Features_API_Getting_Started_Guide.ipynb  AI_Offline_Parcel_Legacy_Format.ipynb  AI_Offline_Parcel_example.ipynb  Coverage_Checker.ipynb  Parcel rollup processing.ipynb  Parcel_rollup.ipynb  Payload_Rollup_Minimal_Example.ipynb  sample_payload.json
scripts/: ai_offline_parcel.py  benchmark_per_class_compute.py
tests/: conftest.py  test_3d_attributes.py  test_address_mode.py  test_ai_offline_parcels.py  test_bearer_auth.py  test_centroid_warning_suppression.py  test_cgroup_cpu.py  test_cgroup_memory.py  test_class_availability.py  test_clipped_roof_component_areas.py  test_column_metadata_layers.py  test_combine_grid_preserves_columns.py  test_constants.py  test_country_units.py  test_coverage_utils.py  test_damage_bug_regression.py  test_damage_classification.py  test_damage_conflation.py  test_damage_conflation_api.py  test_damage_conflation_exporter.py  test_data_dictionary_generator.py  test_defensible_space.py  test_dominant_columns.py  test_exporter.py  test_feature_api.py  test_feature_api_prefer3d.py  test_footprint_rsi.py  test_gridded_aggregate_dict_dedup.py  test_gridding_dtype_bug.py  test_hurricane_score.py  test_integration.py  test_integration_rollup_features.py  test_is_primary.py  test_latency_stats.py  test_multiparcel_roof_attrs.py  test_parcel_rollup_performance.py  test_parcels.py  test_per_class_export_gating.py  test_poles_null_bug.py  test_primary_feature_selection.py  (+11 more)
tests/data/: 10_row_test_set.csv  10_row_test_set_address.csv  classes_availability_sample.json  qgis_test_explorer.qgz  test_coverage_boundary_milton.json  test_coverage_point_milton.json  test_damage_conflation_milton_response.json  test_defensible_space_raw_payload.json  test_features.csv  test_features_2.csv  test_features_3d.csv  test_features_defensible_space.csv  test_features_hurricane_score.csv  test_features_perf_au_all_packs.csv  test_features_perf_au_building_roof.csv  test_features_perf_nj_building_roof.csv  test_features_roof_condition_confidence_stats.csv  test_features_rsi.csv  test_hurricane_score_raw_payload.json  test_hurricane_score_sample.json  test_parcels.csv  test_parcels_2.csv  test_parcels_2_rollup.csv  test_parcels_3.csv  test_parcels_rollup.csv  test_parcels_rollup_defensible_space.csv  test_parcels_rollup_hurricane_score.csv  test_parcels_rollup_roof_condition_confidence_stats.csv  test_parcels_structural_damage.csv  test_roof_age_bulk_nj.csv  test_roof_age_fl_response.json  (+5 more)
(+6 files in other folders)
