[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmaipy"
dynamic = ["version"]
description = "Nearmap AI Python Library for extracting AI features from aerial imagery"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Nearmap AI Systems", email = "ai.systems@nearmap.com"}
]
maintainers = [
    {name = "Nearmap AI Systems", email = "ai.systems@nearmap.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["nearmap", "ai", "geospatial", "gis", "aerial", "imagery", "buildings", "vegetation"]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.0",
    "fsspec>=2025.3.0",
    "geopandas>=1.1.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "pyarrow>=20.0.0",
    "pyproj>=3.7.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rtree",
    "s3fs>=2025.3.0",
    "shapely>=2.1.1",
    "stringcase>=1.2.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
    "build",
    "twine",
]
notebooks = [
    "ipykernel",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/nearmap/nmaipy"
Documentation = "https://github.com/nearmap/nmaipy#readme"
Repository = "https://github.com/nearmap/nmaipy.git"
"Bug Tracker" = "https://github.com/nearmap/nmaipy/issues"

[tool.setuptools]
packages = ["nmaipy"]

[tool.setuptools.package-data]
nmaipy = ["class_descriptions.json"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.dynamic]
version = {attr = "nmaipy.__version__.__version__"}

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 120